Massive refactoring. Not quite finished as StatusManager still needs work. I think I have finally found an acceptable way to validate openings to ensure that overlapping doesn't occur

--- a/app/views/about/copyright.html.haml
+++ b/app/views/about/copyright.html.haml
@@ -29,12 +29,12 @@
 %h2= anchor_for "Data License"
 
 %p
-  <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/2.0/uk/88x31.png" align="right" /></a>
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" align="right" /></a>
 
-  <span xmlns:dc="http://purl.org/dc/elements/1.1/" property="dc:title">Opening Times data</span> by is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/">Creative Commons Attribution-Non-Commercial-Share Alike 2.0 UK: England &amp; Wales License</a>.
+  <span xmlns:dc="http://purl.org/dc/elements/1.1/" property="dc:title">Opening Times data</span> by is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution/Share-Alike License 3.0</a>.
 
 %p
-  If you wish to use the data for Commerical purposes, or anything which isn't covered by the above license then please <a href="/feedback">get in touch</a>.
+  If you wish to use the data for anything which isn't covered by the above license then please <a href="/feedback">get in touch</a>.
 
 %ul
   %li= link_to 'Opening Times data', '/opening-times-data.csv.gz'
@@ -60,3 +60,4 @@
   %li All trade marks reproduced in this website which are not the property of, or licensed to, the operator are acknowledged on the website.
   %li Unauthorised use of this website may give rise to a claim for damages and/or be a criminal offence.
   %li From time to time this website may also include links to other websites. These links are provided for your convenience to provide further information. They do not signify that we endorse the website(s). We have no responsibility for the content of the linked website(s).
+
