--- a/app/views/partials/_banner.html.haml
+++ b/app/views/partials/_banner.html.haml
@@ -1,5 +1,6 @@
 #banner
   %h2#siteTitle
     %a{ :href=>"/", :accesskey => '1' }
-      = render :partial => 'partials/logo'
+      %span{ :style => "margin: 1px"}= render :partial => 'partials/logo'
       Opening-Times.co.uk
+
