--- a/app/views/facilities/_map_show.html.erb
+++ b/app/views/facilities/_map_show.html.erb
@@ -7,7 +7,7 @@ function initialize() {
   if (GBrowserIsCompatible()) {
     var latlng = new GLatLng(<%= @facility.lat %>,<%= @facility.lng %>);
     var map = new GMap2(document.getElementById("map_canvas"));
-  	map.setCenter(latlng, 13);
+  	map.setCenter(latlng, 15);
 
     map.addControl(new GLargeMapControl());
     map.addControl(new GMenuMapTypeControl());
@@ -15,17 +15,6 @@ function initialize() {
     map.removeMapType(G_SATELLITE_MAP);
     var mapControl = new GMapTypeControl();
     map.addControl(mapControl);
-
-    // Create a base icon for all of our markers that specifies the
-    // shadow, icon dimensions, etc.
-/*
-    var baseIcon = new GIcon(G_DEFAULT_ICON);
-    baseIcon.shadow = "http://www.google.com/mapfiles/shadow50.png";
-    baseIcon.iconSize = new GSize(20, 34);
-    baseIcon.shadowSize = new GSize(37, 34);
-    baseIcon.iconAnchor = new GPoint(9, 34);
-    baseIcon.infoWindowAnchor = new GPoint(9, 2);
-*/
 
     function createMarker(lat, lng, index, status, info) {
       point = new GLatLng(lat, lng);
@@ -42,7 +31,7 @@ function initialize() {
     }
 
     <% @nearby.each_with_index do |n,index| -%>
-    <% info = escape_javascript(link_to(h(n.name),n) + "<br />" + comma_to_br(h(n.address))) -%>
+    <% info = escape_javascript(link_to(n.full_name,n) + "<br />" + comma_to_br(h(n.address))) -%>
     map.addOverlay(createMarker(<%= "#{n.lat}, #{n.lng}, #{index+1}" %>, "<%= @status_manager.status(n).downcase %>", "<%= info %>"));
     <% end -%>
 
@@ -56,7 +45,7 @@ function initialize() {
     var locationMarker = new GMarker(latlng, { icon:locationIcon } )
     map.addOverlay(locationMarker);
 
-    <% info = "<strong>#{h(@facility.name)}</strong><br />#{comma_to_br(@facility.address)}, #{@facility.postcode}" -%>
+    <% info = "<strong>#{@facility.full_name}</strong><br />#{comma_to_br(@facility.address)}, #{@facility.postcode}" -%>
     locationMarker.openInfoWindowHtml("<%= escape_javascript(info) %>");
   }
 }
@@ -64,3 +53,4 @@ function initialize() {
 </script>
 <% end -%>
 <div id="map_canvas" style="border: 1px solid black; height: 360px;"></div>
+
