--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -1,7 +1,9 @@
 #footer
 
   %ul
-    %li= link_to 'Add a business', new_facility_path
+    %li
+      %strong
+        = link_to 'Add a business', new_facility_path
     %li= link_to 'Blog', 'http://blog.opening-times.co.uk'
     %li= link_to 'Help', help_path
 
@@ -22,3 +24,4 @@
     %p
       Opening Times server clock
       = Time.current.strftime("%I:%M%p - %a %d %b %Y")
+
