--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -321,13 +321,14 @@ table.inputFormTable
     :font-size .8em
     :color #444
   label
+    :color #666
     :display block
     :padding 4px 0 0 0
     :white-space nowrap
-  label.optional
-    :color #666
-    &:before
-      content: "* "
+  label.mandatory
+    :color #000
+    &:after
+      content: " *"
 
 table.openingsForm
   :border-collapse collapse
