--- a/app/views/facilities/new.html.haml
+++ b/app/views/facilities/new.html.haml
@@ -1,3 +1,6 @@
 %h1= @page_title = "Add a business"
 
+%p Please check the business isn't already in the directory before creating a new entry.
+
 = render :partial => 'form'
+
