--- a/app/views/facilities/_infobox.haml
+++ b/app/views/facilities/_infobox.haml
@@ -19,10 +19,13 @@
       = link_to @facility.revision, facility_revisions_path(@facility)
       |
       = link_to 'feed', facility_revisions_path(@facility, :format => "xml"), :rel => "alternate", :type => "application/atom+xml"
-    %li
-      = link_to 'Edit', edit_facility_path(@facility)
-      |
-      = link_to 'Remove', remove_facility_path(@facility)
+    - if lockdown?
+      %li Editing is currently disabled
+    - else
+      %li
+        = link_to 'Edit', edit_facility_path(@facility)
+        |
+        = link_to 'Remove', remove_facility_path(@facility)
 
 
   Summary:
