Added recently removed. Updated privacy to alert about IP storage. Added link to Twitter acount

--- a/app/views/about/feedback.html.haml
+++ b/app/views/about/feedback.html.haml
@@ -17,5 +17,9 @@
 %p Please consider joing the <a href="http://groups.google.com/group/openingtimes">Opening Times mailing list</a>.
 
 %p
-  Otherwise, I'd love to hear your feedback
-  = mail_to 'julian@opening-times.co.uk'
+  Follow me on on Twitter
+  = link_to '@opening_times', 'http://twitter.com/opening_times'
+
+%p
+  Otherwise, I'd love to hear your feedback julian [at] opening-times.co.uk
+
