--- a/app/views/about/recentchanges.html.haml
+++ b/app/views/about/recentchanges.html.haml
@@ -11,6 +11,7 @@
     %th Length
     %th User
     %th Updated
+    %th Comment
 
   - for revision in @revisions
     %tr
@@ -18,5 +19,12 @@
       %td= link_to h(revision.facility.full_name), facility_revision_path(revision.facility_id, revision.id)
       %td.num= revision.revision
       %td.num= number_with_delimiter(revision.length)
-      %td= revision.user_id
+      %td.num= revision.user_id
       %td= time_ago_in_words(revision.created_at) + " ago"
+      %td=h revision.comment
+
+%h2 See also
+
+%ul
+  %li= link_to 'Recently removed', recentlyremoved_path
+
