--- a/app/views/about/privacy.html.haml
+++ b/app/views/about/privacy.html.haml
@@ -3,6 +3,9 @@
 %p The privacy of our visitors to Opening-Times.co.uk is important to us.
 %p At Opening-Times.co.uk, we recognize that privacy of your personal information is important. Here is information on what types of personal information we receive and collect when you use and visit Opening-Times.co.uk, and how we safeguard your information.  We never sell your personal information to third parties.
 
+%h2 User Information
+%p Your email address is only used for password reminders and major site anouncements. Your <a href="http://en.wikipedia.org/wiki/IP_address">IP address</a> is stored with each revision of a business, this is to help to detecha and prevent   vandalism. A list of edits by IP address is made publically available.
+
 %h2 Log Files
 %p As with most other websites, we collect and use the data contained in log files.  The information in the log files include  your IP (internet protocol) address, your ISP (internet service provider, such as AOL or Shaw Cable), the browser you used to visit our site (such as Internet Explorer or Firefox), the time you visited our site and which pages you visited throughout our site.
 %h2 Cookies and Web Beacons
@@ -19,4 +22,5 @@
 
 %p Deleting cookies does not mean you are permanently opted out of any advertising program.  Unless you have settings that disallow cookies, the next time you visit a site running the advertisements, a new cookie will be added.
 
-%p AdSense Privacy Policy Provided by <a href="http://www.JenSense.com">JenSense</a>
+%p AdSense Privacy Policy provided by <a href="http://www.JenSense.com">JenSense</a>
+
