--- a/app/views/revisions/index.html.haml
+++ b/app/views/revisions/index.html.haml
@@ -1,6 +1,6 @@
 - @no_index = true
 - content_for :head do
-  %link{ :rel => "alternate", :type => "application/atom+xml", :href => facility_revisions_path(@facility, :format => "xml") }
+  = auto_discovery_link_tag(:atom, facility_revisions_path(@facility, :format => "xml"), { :title => "Revision ATOM feed" } )
 
 %h1= @page_title = "Revision History  - Facility " + @facility.id.to_s
 
