--- a/app/views/ip/index.html.haml
+++ b/app/views/ip/index.html.haml
@@ -1,7 +1,4 @@
-- content_for :head do
-  = auto_discovery_link_tag(:atom, { :format => :xml }, { :title => "Recent changes ATOM feed" } )
-
-%h1= @page_title = "Recent changes"
+%h1= @page_title = "Changes by IP"
 
 %table.reports
   %tr
