Changed register to sign up and tidied

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,4 @@
-%h1= @page_title = "Register"
+%h1= @page_title = "Sign up / register"
 
 %p
   Register with Opening Times to add and edit business information.
@@ -26,3 +26,4 @@
 
   %p
     = f.submit 'Create', :disable_with => "Please wait...", :class => 'button tick'
+
