--- a/app/views/partials/_user_bar.html.haml
+++ b/app/views/partials/_user_bar.html.haml
@@ -11,6 +11,7 @@
     \|
     = link_to 'Logout', logout_path
   - else
-    = link_to 'Register', new_user_path
-    \|
     = link_to 'Login', login_path
+    \|
+    = link_to 'Sign up', signup_path
+
