Improvements to HolidayOpenings to make it work properly when invalid on create. Also some playing around with the display of opening hours in show

--- a/app/views/about/privacy.html.haml
+++ b/app/views/about/privacy.html.haml
@@ -4,7 +4,7 @@
 %p At Opening-Times.co.uk, we recognize that privacy of your personal information is important. Here is information on what types of personal information we receive and collect when you use and visit Opening-Times.co.uk, and how we safeguard your information.  We never sell your personal information to third parties.
 
 %h2 User Information
-%p Your email address is only used for password reminders and major site anouncements. Your <a href="http://en.wikipedia.org/wiki/IP_address">IP address</a> is stored with each revision of a business, this is to help to detecha and prevent   vandalism. A list of edits by IP address is made publically available.
+%p Your email address is only used for password reminders and major site anouncements. Your <a href="http://en.wikipedia.org/wiki/IP_address">IP address</a> is stored with each revision of a business, this is to help to detect and prevent vandalism.
 
 %h2 Log Files
 %p As with most other websites, we collect and use the data contained in log files.  The information in the log files include  your IP (internet protocol) address, your ISP (internet service provider, such as AOL or Shaw Cable), the browser you used to visit our site (such as Internet Explorer or Firefox), the time you visited our site and which pages you visited throughout our site.
