--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -293,6 +293,7 @@ ul.noBullet
   :text-align center
 
 .infoBox
+  :margin-top 1em
   :border 1px solid #ccc
   :background #eee
   :font-size smaller
